# haskell-language-server

./: cabal.project  haskell-language-server.cabal  shell.nix  stack-lts16.yaml  stack-lts19.yaml  stack.yaml
exe/: Plugins.hs
ghcide/src/Development/IDE/Core/: Rules.hs
ghcide/src/Development/IDE/LSP/: LanguageServer.hs
hls-plugin-api/src/Ide/: Types.hs
plugins/default/src/Ide/Plugin/: ExampleCabal.hs
plugins/hls-cabal-plugin/: hls-cabal-plugin.cabal
plugins/hls-cabal-plugin/src/Ide/Plugin/: Cabal.hs
plugins/hls-cabal-plugin/src/Ide/Plugin/Cabal/: Diag.hs  LicenseSuggest.hs  Parse.hs
