cabal-version:      3.0
name:               hls-cabal-plugin
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Fendor
maintainer:         fendor@posteo.de
category:           Development
extra-source-files: CHANGELOG.md
                    test/testdata/simple.cabal
                    test/testdata/simple.cabal.golden.txt

library
  exposed-modules:  Ide.Plugin.Cabal
                    Ide.Plugin.Cabal.Parse
                    Ide.Plugin.Cabal.Diag
                    Ide.Plugin.Cabal.LicenseSuggest
  build-depends:
    , aeson
    , base            >=4.12 && <5
    , czipwith
    , extra
    , filepath
    , ghc-exactprint
    , ghcide          >=1.6  && <1.8
    , hls-plugin-api  >=1.3  && <1.5
    , lens
    , lsp
    , lsp-types
    , text
    , unordered-containers
    , transformers
    , hashable
    , deepseq
    , stm
    , regex-tdfa
    -- BEGIN "Ide.Plugin.Cabal.Parse"
    , Cabal == 3.6.2.0
    , bytestring
    , directory
    -- END

  -- see https://github.com/lspitzner/brittany/issues/364
  -- TODO: remove these when GH issue #2005 is resolved
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite hls-cabal-plugin-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , filepath
    , hls-cabal-plugin
    , hls-test-utils    ^>=1.3
    , lsp
    , lsp-types
    , text
    , tasty-hunit
  ghc-options: -Wall
